@@ -26,34 +26,17 @@
 
 static const Convenience convenience[] = { \
     /*  class     desktop follow */
-    { "Thunar",       2,    1 },
-    { "Firefox",      3,    1 },
-    { "Links",        3,    1 },
-    { "MPlayer",      4,    1 },
-    { "Thunderbird",  5,    0 },
-    { "Pysol",        6,    1 },
+    /*{ "Thunar",       2,    1 }, */
 };
 
 static const Positional positional[] = { \
     /* class  x  y  width  height */
-    { "Thunar", 100,100,800,400 },
-    { "URxvt", 100,320,820,400 },
-    { "Xchat", 320,60,950,500 }
+    /*{ "Thunar", 100,100,800,400 }, */
 };
 
 const char* dmenucmd[]      = {"dmenu_run","-i","-nb","#666622","-nf","white",NULL};
 const char* urxvtcmd[]      = {"urxvtc",NULL};
-const char* terminalcmd[]   = {"Terminal",NULL};
 const char* thunarcmd[]     = {"thunar",NULL};
-const char* firefoxcmd[]    = {"firefox",NULL};
-const char* mailcmd[]       = {"thunderbird",NULL };
-const char* voldowncmd[]    = {"/home/pnewm/.bin/voldown",NULL};
-const char* volupcmd[]      = {"/home/pnewm/.bin/volup",NULL};
-const char* prevoldowncmd[] = {"/home/pnewm/.bin/prevoldown",NULL};
-const char* prevolupcmd[]   = {"/home/pnewm/.bin/prevolup",NULL};
-const char* vols_what[]     = {"/home/pnewm/.bin/volumes_what",NULL};
-const char* rebootcmd[]     = {"sudo","reboot",NULL};
-const char* shutdowncmd[]   = {"sudo","shutdown","-h","now",NULL};
 
 #define DESKTOPCHANGE(K,N) \
     {  MOD1,             K,        change_desktop, {.i = N}}, \
@@ -73,9 +56,7 @@ static key keys[] = {
     {  MOD1,             XK_Tab,        last_desktop,      {NULL}},
     {  MOD1,             XK_b,          toggle_panel,      {NULL}},
     {  MOD1,             XK_Return,     spawn,             {.com = urxvtcmd}},
-    {  MOD1,             XK_Up,	        spawn,             {.com = volupcmd}},
     {  MOD1,             XK_a,          rotate_mode,       {.i = 1}},
-    {  MOD1,             XK_Down,       spawn,             {.com = voldowncmd}},
     {  MOD1|ShiftMask,   XK_j,          move_up,           {.i = -10}},
     {  MOD1|ShiftMask,   XK_k,          move_down,         {.i = 10}},
     {  MOD1|ShiftMask,   XK_o,          move_sideways,     {.i = -10}},//left
@@ -89,17 +70,9 @@ static key keys[] = {
     {  MOD1|ShiftMask,   XK_m,          more_master,       {.i = 1}}, // add window to master area
     {  MOD1|ShiftMask,   XK_l,          more_master,       {.i = -1}}, // remove window from master area
     {  MOD1|ControlMask, XK_q,          quit,              {NULL}},
-    {  MOD1|ControlMask, XK_r,          spawn,             {.com = rebootcmd}},
-    {  MOD1|ControlMask, XK_s,          spawn,             {.com = shutdowncmd}},
     {  MOD4,             XK_Right,      rotate_desktop,    {.i = 1}},
     {  MOD4,             XK_Left,       rotate_desktop,    {.i = -1}},
-    {  MOD4,             XK_e,          spawn,             {.com = mailcmd}},
-    {  MOD4,             XK_f,          spawn,             {.com = firefoxcmd}},
     {  MOD4,             XK_h,		    spawn,             {.com = thunarcmd}},
-    {  MOD4,             XK_t,          spawn,             {.com = terminalcmd}},
-    {  MOD4,             XK_v,          spawn,             {.com = vols_what}},
-    {  MOD4,             XK_Up,	        spawn,             {.com = prevolupcmd}},
-    {  MOD4,             XK_Down,       spawn,             {.com = prevoldowncmd}},
        DESKTOPCHANGE(   XK_1,                              0)
        DESKTOPCHANGE(   XK_2,                              1)
        DESKTOPCHANGE(   XK_3,                              2)
